<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lesson1"
                    android:layout_width="212sp"
                    android:layout_height="wrap_content"
                    android:text="@string/lesson"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/homework1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homework"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lesson2"
                    android:layout_width="212sp"
                    android:layout_height="wrap_content"
                    android:text="@string/lesson"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/homework2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homework"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lesson3"
                    android:layout_width="212sp"
                    android:layout_height="wrap_content"
                    android:text="@string/lesson"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/homework3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homework"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lesson4"
                    android:layout_width="212sp"
                    android:layout_height="wrap_content"
                    android:text="@string/lesson"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/homework4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homework"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lesson5"
                    android:layout_width="212sp"
                    android:layout_height="wrap_content"
                    android:text="@string/lesson"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                     />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/homework5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homework"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
